2012-11-13  Sami Kyostila  <skyostil@chromium.org>

        Allow painting outside overflow clip in accelerated scrolling layers
        https://bugs.webkit.org/show_bug.cgi?id=100524

        Reviewed by Simon Fraser.

        In preparation for avoiding repaints when scrolling child layers, make it
        possible to paint outside the overflow clip.

        Test: compositing/overflow/updating-scrolling-content.html

        * rendering/LayoutState.h:
        (LayoutState):
        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::paint):
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::applyCachedClipAndScrollOffsetForRepaint):
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::repaintBlockSelectionGaps):

2012-11-13  Patrick Gansterer  <paroga@webkit.org>

        Port SimpleFontDataWin.cpp to WinCE
        https://bugs.webkit.org/show_bug.cgi?id=97889

        Reviewed by Brent Fulgham.

        Add #if !OS(WINCE) around some parts of the code, so it can be used by the WinCE port too in a next step.
        Also cleaned up the include headers.

        * platform/graphics/win/SimpleFontDataWin.cpp:
        (WebCore::SimpleFontData::initGDIFont):
        (WebCore::SimpleFontData::platformDestroy):
        (WebCore::SimpleFontData::boundsForGDIGlyph):
        (WebCore):
        (WebCore::SimpleFontData::widthForGDIGlyph):

2012-11-13  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: [Chromium] move spectrum.css into the standalone css files group.

        Not reviewed: moved css file in gypi.

        * WebCore.gypi:

2012-11-13  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r134434.
        http://trac.webkit.org/changeset/134434
        https://bugs.webkit.org/show_bug.cgi?id=102072

        The test that was added asserts in loader.

        * loader/FrameLoader.cpp:
        (WebCore::createWindow):
        * page/DOMWindow.cpp:
        (WebCore):